[package]
name = "future_prj"
version = "0.1.0"
authors = ["hongyuanyang <hongyuanyang@huobi.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
futures-preview = { package = "futures-preview", version = "=0.3.0-alpha.17", features = ["compat"] }
tokio-core="*"
tokio = "0.1.22"
chrono = "0.4.6"
bytes = "*"
rand = "*"
hyper = "0.12"
futures-util = "0.2"
