[package]
name = "future_prj"
version = "0.1.0"
authors = ["hongyuanyang <hongyuanyang@huobi.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
futures-preview = { package = "futures-preview", version = "=0.3.0-alpha.17", features = ["compat"] }
tokio-core="*"
tokio = "0.1.22"
chrono = "0.4.6"
bytes = "*"
rand = "*"
hyper = "0.12"
futures-util = "0.2"
futures-timer = "0.2.1"
tokio-io = "0.1"
tokio-timer = "0.2"
tokio-tcp = "0.1"
tokio-executor = "0.1"
http = "0.1"
httparse = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
yamux = "0.2.1"